[gd_scene load_steps=2 format=3 uid="uid://c5bxnqr8jxg1w"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.25, 1)

[node name="MenuPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "CO-OP TOWER DEFENSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PlayerNameInput" type="LineEdit" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter your name..."
alignment = 1

[node name="Spacer2" type="Control" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HostButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="Spacer3" type="Control" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="QuitButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="HostPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HostPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="HostPanel/VBoxContainer"]
layout_mode = 2
text = "HOST GAME"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="HostPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PortLabel" type="Label" parent="HostPanel/VBoxContainer"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="HostPanel/VBoxContainer"]
layout_mode = 2
text = "7777"
alignment = 1

[node name="Spacer2" type="Control" parent="HostPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="CreateServerButton" type="Button" parent="HostPanel/VBoxContainer"]
layout_mode = 2
text = "Create Server"

[node name="BackButton" type="Button" parent="HostPanel/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="JoinPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -180.0
offset_right = 200.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="JoinPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="JoinPanel/VBoxContainer"]
layout_mode = 2
text = "JOIN GAME"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="JoinPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="IPLabel" type="Label" parent="JoinPanel/VBoxContainer"]
layout_mode = 2
text = "IP Address:"

[node name="IPInput" type="LineEdit" parent="JoinPanel/VBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
alignment = 1

[node name="PortLabel" type="Label" parent="JoinPanel/VBoxContainer"]
layout_mode = 2
text = "Port:"

[node name="PortInput" type="LineEdit" parent="JoinPanel/VBoxContainer"]
layout_mode = 2
text = "7777"
alignment = 1

[node name="Spacer2" type="Control" parent="JoinPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ConnectButton" type="Button" parent="JoinPanel/VBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="BackButton" type="Button" parent="JoinPanel/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="LobbyPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyPanel"]
layout_mode = 2

[node name="Title" type="Label" parent="LobbyPanel/VBoxContainer"]
layout_mode = 2
text = "LOBBY"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="LobbyPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="PlayersLabel" type="Label" parent="LobbyPanel/VBoxContainer"]
layout_mode = 2
text = "Players:"

[node name="PlayerList" type="ItemList" parent="LobbyPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="Spacer2" type="Control" parent="LobbyPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartGameButton" type="Button" parent="LobbyPanel/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="BackButton" type="Button" parent="LobbyPanel/VBoxContainer"]
layout_mode = 2
text = "Leave"
